# fraud-detection-ai-project

./: .gitignore  Enonce_Projet_AI.txt  README.md  pyproject.toml  requirements.txt
notebooks/: 01_EDA.ipynb  02_Models.ipynb  03_Evaluation_Calibration.ipynb  04_Interpretability.ipynb
outputs/: model_logistic.pkl  model_xgboost.pkl  results_summary.csv  rf_outlier_explanation.txt  scaler.pkl
reports/: rapport_projet_IA.md
src/: config.py  eda.py  evaluation.py  interpretability.py  main.py  model_logistic.py  model_rf.py  model_xgboost.py
